# Wallpaper_Project

./: .clang-format  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
lua/: init.lua
source/: engine.c  engine.h  globals.h  lib.c  main.c  x11func.c  x11func.h
test/: CMakeLists.txt
test/source/: Wallpaper_Project_test.c
